feat: add cannon physics and network throttle

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <nav id="navbar"><span>Tanks for Nothing</span></nav>
-  <div id="instructions">WASD move | Mouse look | C freelook | V camera | Scroll zoom | 1-4 ammo</div>
+  <div id="instructions">WASD move | Space brake | Mouse look | C freelook | V camera | Scroll zoom | 1-4 ammo</div>
   <script src="/socket.io/socket.io.js"></script>
   <script
     type="module"
