feat: add acceleration control and slider

--- a/admin/tanks.html
+++ b/admin/tanks.html
@@ -76,9 +76,9 @@
           <input id="tankCrew" type="range" min="1" max="10" step="1" oninput="document.getElementById('crewVal').innerText=this.value">
           <span id="crewVal"></span>
         </label>
-        <label>Engine Horsepower
-          <input id="tankHP" type="range" min="100" max="1000" step="50" oninput="document.getElementById('hpVal').innerText=this.value">
-          <span id="hpVal"></span>
+        <label>Max Acceleration (m/s²)
+          <input id="tankAccel" type="range" min="0.5" max="5" step="0.5" oninput="document.getElementById('accelVal').innerText=this.value">
+          <span id="accelVal"></span>
         </label>
         <label>Max Speed (km/h)
           <input id="tankMaxSpeed" type="range" min="10" max="100" step="1" oninput="document.getElementById('maxSpeedVal').innerText=this.value">
