--- a/admin/users.html
+++ b/admin/users.html
@@ -29,7 +29,7 @@
   <div id="login">
     <h2>Admin Login</h2>
     <input type="password" id="password" placeholder="Password">
-    <button id="loginBtn">Login</button>
+    <button id="loginBtn" type="button">Login</button>
   </div>
 
   <div id="app" style="display:none">
