feat: adopt vite pipeline for browser client

--- a/packages/client/public/login.html
+++ b/packages/client/public/login.html
@@ -34,6 +34,6 @@
     <p>No account? <a href="/signup.html">Sign up here</a></p>
     <div id="authError"></div>
   </div>
-  <script type="module" src="js/auth.js"></script>
+  <script type="module" src="../src/auth.ts"></script>
 </body>
 </html>
