--- a/packages/client/public/index.html
+++ b/packages/client/public/index.html
@@ -38,12 +38,6 @@
     <div id="lobbyError"></div>
   </div>
   <div id="instructions" style="display:none">WASD move | Space brake | Mouse look | C freelook | V camera | Scroll zoom | 1-4 ammo</div>
-  <script type="module" src="js/nav.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script
-    type="module"
-    src="js/tanksfornothing-client.js"
-    onerror="console.error('Failed to load client module');document.body.innerHTML='<div style=\'margin-top:2em;text-align:center;color:red\'>Failed to load game client.</div>'"
-  ></script>
+  <script type="module" src="../src/main.ts"></script>
 </body>
 </html>
